--- a/src/main/java/com/github/phonemirror/gui/view/impl/MainMenu.form
+++ b/src/main/java/com/github/phonemirror/gui/view/impl/MainMenu.form
@@ -75,7 +75,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="b8c98" binding="contentPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="b8c98" binding="contentPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
