--- a/src/main/resources/fxml/DevicesTab.fxml
+++ b/src/main/resources/fxml/DevicesTab.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <!--
   ~ PhoneMirror-client
   ~ Copyright (C) 2017  Philip Foster
@@ -23,6 +18,11 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
             fx:controller="com.github.phonemirror.gui.controller.DevicesTabFxmlController">
     <children>
@@ -33,9 +33,12 @@
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="534.0" prefWidth="183.0">
                     <children>
-                        <ListView id="devicesList" layoutX="7.0" layoutY="25.0" maxHeight="25.0" minHeight="25.0"
-                                  prefHeight="521.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-                                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                        <ListView id="devicesList" layoutY="42.0" maxHeight="493.0" minHeight="25.0" prefHeight="493.0"
+                                  prefWidth="192.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0"/>
+                        <Button id="pairNewDeviceButton" layoutX="40.0" layoutY="14.0" mnemonicParsing="false"
+                                onAction="#showPairingDialog" prefHeight="25.0" prefWidth="110.0" text="Pair new device"
+                                AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0"/>
                     </children>
                 </AnchorPane>
                 <AnchorPane id="devicesPane" minHeight="0.0" minWidth="0.0" prefHeight="535.0" prefWidth="397.0">
